@@ -2435,17 +2435,6 @@
       </component>
     </version>
   </module>
-  <module name="radioactive">
-    <version release="gnome-2.8">
-      <component name="radioactive" dir="radioactive" group="extras">
-        <podir dir="po"/>
-        <potname name="radioactive.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-  </module>
   <module name="red-carpet">
     <version release="gnome-2.8">
       <component name="red-carpet" dir="red-carpet" group="extras">
