@@ -1,3 +1,8 @@
+2004-08-20  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Removed radioactive. Maintainer
+	says it's dead.
+
 2004-08-17  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Moved the accepted proposed modules
